--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -57,9 +57,9 @@
    ],
    "source": [
     "# Data loading functions. Uncomment the one you want to use\n",
-    "from adni.load_data import load_data\n",
-    "#from brats.load_data import load_data\n",
-    "#from hn.load_data import load_data\n",
+    "from worcgist.load_data import load_data\n",
+    "#from worclipo.load_data import load_data\n",
+    "#from worcliver.load_data import load_data\n",
     "#from ecg.load_data import load_data\n",
     "\n",
     "data = load_data()\n",
