Changes to load only correct data.

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -22,10 +22,18 @@
     "id": "CiDn2Sk-VWqE",
     "outputId": "64224cd2-6054-4b04-a3f6-af8290400dfc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this to use from colab environment\n",
-    "#!pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
+    "%pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
    ]
   },
   {
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -50,22 +58,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of samples: 855\n",
-      "The number of columns: 268\n"
+      "The number of samples: 186\n",
+      "The number of columns: 494\n"
      ]
     }
    ],
    "source": [
     "# Data loading functions. Uncomment the one you want to use\n",
-    "from worcgist.load_data import load_data\n",
-    "#from worclipo.load_data import load_data\n",
-    "#from worcliver.load_data import load_data\n",
-    "#from ecg.load_data import load_data\n",
+    "from worcliver.load_data import load_data\n",
     "\n",
     "data = load_data()\n",
     "print(f'The number of samples: {len(data.index)}')\n",
-    "print(f'The number of columns: {len(data.columns)}')\n",
-    "\n"
+    "print(f'The number of columns: {len(data.columns)}')\n"
    ]
   },
   {
@@ -97,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
