--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -64,31 +64,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "lipoma\n"
-          ]
-        },
-        {
-          "ename": "NameError",
-          "evalue": "name 'i' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[27], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m label \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mset\u001b[39m(data\u001b[39m.\u001b[39mlabel))\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(label[\u001b[39m0\u001b[39m])\n\u001b[1;32m----> 4\u001b[0m \u001b[39mif\u001b[39;00m data\u001b[39m.\u001b[39mlabel[i] \u001b[39m==\u001b[39m label[\u001b[39m0\u001b[39m]: \n\u001b[0;32m      5\u001b[0m     plt\u001b[39m.\u001b[39mscatter(data[\u001b[39m2\u001b[39m],data[\u001b[39m3\u001b[39m],color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mred\u001b[39m\u001b[39m'\u001b[39m) \n\u001b[0;32m      6\u001b[0m \u001b[39melse\u001b[39;00m: \n",
-            "\u001b[1;31mNameError\u001b[0m: name 'i' is not defined"
+            "The number of samples: 115\n",
+            "The number of columns: 481\n"
           ]
         }
       ],
       "source": [
         "# the possible outcomes: lipoma or liposarcoma\n",
-        "label = list(set(data.label))"
+        "label = list(set(data.label))\n",
+        "\n",
+        "# remove columns only containing 0\n",
+        "data = data.loc[:, (data != 0.0).any(axis=0)] \n",
+        "print(f'The number of samples: {len(data.index)}')\n",
+        "print(f'The number of columns: {len(data.columns)}')\n",
+        "\n",
+        "# export to csv to see if the code works as expected\n",
+        "data.to_csv('datacheck.csv', index=False)"
       ]
     }
   ],
