change labels to 0/1 and examples

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -43,10 +43,23 @@
         }
       ],
       "source": [
+        "# import packages\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "from worclipo.load_data import load_data\n",
         "import matplotlib as plt\n",
+        "from sklearn import metrics\n",
+        "\n",
+        "# Classifiers\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+        "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.linear_model import SGDClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "# fetch data\n",
+        "from worclipo.load_data import load_data\n",
         "\n",
         "data = load_data()\n",
         "print(f'The number of samples: {len(data.index)}')\n",
@@ -64,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -87,6 +100,137 @@
         "\n",
         "# export to csv to see if the code works as expected\n",
         "data.to_csv('datacheck.csv', index=False)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Functions to generate plots (from excercises)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.decomposition import PCA\n",
+        "\n",
+        "def colorplot(clf, ax, x, y, h=100, precomputer=None):\n",
+        "    '''\n",
+        "    Overlay the decision areas as colors in an axes.\n",
+        "    \n",
+        "    Input:\n",
+        "        clf: trained classifier\n",
+        "        ax: axis to overlay color mesh on\n",
+        "        x: feature on x-axis\n",
+        "        y: feature on y-axis\n",
+        "        h(optional): steps in the mesh\n",
+        "    '''\n",
+        "    # Create a meshgrid the size of the axis\n",
+        "    xstep = (x.max() - x.min() ) / 20.0\n",
+        "    ystep = (y.max() - y.min() ) / 20.0\n",
+        "    x_min, x_max = x.min() - xstep, x.max() + xstep\n",
+        "    y_min, y_max = y.min() - ystep, y.max() + ystep\n",
+        "    h = max((x_max - x_min, y_max - y_min))/h\n",
+        "    xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n",
+        "                         np.arange(y_min, y_max, h))\n",
+        "\n",
+        "    features = np.c_[xx.ravel(), yy.ravel()]\n",
+        "    if precomputer is not None:\n",
+        "        if type(precomputer) is RBFSampler:\n",
+        "            features = precomputer.transform(features)\n",
+        "        elif precomputer is rbf_kernel:\n",
+        "            features = rbf_kernel(features, X)\n",
+        "            \n",
+        "    # Plot the decision boundary. For that, we will assign a color to each\n",
+        "    # point in the mesh [x_min, x_max]x[y_min, y_max].\n",
+        "    if hasattr(clf, \"decision_function\"):\n",
+        "        Z = clf.decision_function(features)\n",
+        "    else:\n",
+        "        Z = clf.predict_proba(features)\n",
+        "    if len(Z.shape) > 1:\n",
+        "        Z = Z[:, 1]\n",
+        "    \n",
+        "    # Put the result into a color plot\n",
+        "    cm = plt.cm.RdBu_r\n",
+        "    Z = Z.reshape(xx.shape)\n",
+        "    ax.contourf(xx, yy, Z, cmap=cm, alpha=.8)\n",
+        "    del xx, yy, x_min, x_max, y_min, y_max, Z, cm"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Plot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "            PREDICT_original_sf_compactness_avg_2.5D  \\\n",
+            "ID                                                     \n",
+            "Lipo-001_0                                  0.368434   \n",
+            "Lipo-002_0                                  0.660571   \n",
+            "Lipo-003_0                                  0.365191   \n",
+            "Lipo-004_0                                  0.372210   \n",
+            "Lipo-005_0                                  0.369120   \n",
+            "...                                              ...   \n",
+            "Lipo-111_0                                  0.244813   \n",
+            "Lipo-112_0                                  0.197353   \n",
+            "Lipo-113_0                                  0.307562   \n",
+            "Lipo-114_0                                  0.577333   \n",
+            "Lipo-115_0                                  0.635282   \n",
+            "\n",
+            "            PREDICT_original_sf_convexity_avg_2.5D  \n",
+            "ID                                                  \n",
+            "Lipo-001_0                                0.694139  \n",
+            "Lipo-002_0                                0.871182  \n",
+            "Lipo-003_0                                0.704710  \n",
+            "Lipo-004_0                                0.754497  \n",
+            "Lipo-005_0                                0.774545  \n",
+            "...                                            ...  \n",
+            "Lipo-111_0                                0.583870  \n",
+            "Lipo-112_0                                0.457694  \n",
+            "Lipo-113_0                                0.711245  \n",
+            "Lipo-114_0                                0.883604  \n",
+            "Lipo-115_0                                0.844560  \n",
+            "\n",
+            "[115 rows x 2 columns]\n"
+          ]
+        },
+        {
+          "ename": "AttributeError",
+          "evalue": "module 'matplotlib' has no attribute 'figure'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[19], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(X4)\n\u001b[0;32m      3\u001b[0m Y4 \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mlabel\n\u001b[1;32m----> 4\u001b[0m fig \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39;49mfigure(figsize\u001b[39m=\u001b[39m(\u001b[39m24\u001b[39m, \u001b[39m8\u001b[39m))\n\u001b[0;32m      5\u001b[0m ax \u001b[39m=\u001b[39m fig\u001b[39m.\u001b[39madd_subplot(\u001b[39m133\u001b[39m)\n\u001b[0;32m      6\u001b[0m ax\u001b[39m.\u001b[39mset_title(\u001b[39m\"\u001b[39m\u001b[39mA more complicated problem\u001b[39m\u001b[39m\"\u001b[39m, fontsize\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msmall\u001b[39m\u001b[39m'\u001b[39m)\n",
+            "File \u001b[1;32mc:\\ProgramData\\miniconda3\\lib\\site-packages\\matplotlib\\_api\\__init__.py:224\u001b[0m, in \u001b[0;36mcaching_module_getattr.<locals>.__getattr__\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m    222\u001b[0m \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m props:\n\u001b[0;32m    223\u001b[0m     \u001b[39mreturn\u001b[39;00m props[name]\u001b[39m.\u001b[39m\u001b[39m__get__\u001b[39m(instance)\n\u001b[1;32m--> 224\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\n\u001b[0;32m    225\u001b[0m     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmodule \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__module__\u001b[39m\u001b[39m!r}\u001b[39;00m\u001b[39m has no attribute \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m!r}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+            "\u001b[1;31mAttributeError\u001b[0m: module 'matplotlib' has no attribute 'figure'"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "X4 = data[[\"PREDICT_original_sf_compactness_avg_2.5D\",\"PREDICT_original_sf_convexity_avg_2.5D\"]]\n",
+        "print(X4)\n",
+        "Y4 = data.label\n",
+        "fig = plt.figure(figsize=(24, 8))\n",
+        "ax = fig.add_subplot(133)\n",
+        "ax.set_title(\"A more complicated problem\", fontsize='small')\n",
+        "ax.scatter(X4[:, 0], X4[:, 1], marker='o', c=Y4, s=25, edgecolor='k', cmap=plt.cm.Paired)\n"
       ]
     }
   ],
