Test for branch and Data clean header

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -73,6 +73,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data clean\n",
+    "Removal of dubble entries (Features and samples)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
