--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data clean\n",
+    "# Data clean before split\n",
     "Removal of dubble entries (Features and samples)"
    ]
   },
