--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -82,11 +82,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Splitting of data\n"
+   ]
   }
  ],
  "metadata": {
