--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,15 @@
     "id": "CiDn2Sk-VWqE",
     "outputId": "64224cd2-6054-4b04-a3f6-af8290400dfc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this to use from colab environment\n",
     "%pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
