Develop branch maken en even wat inzetten

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -73,6 +73,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Oefen zodat er een develop branch gemaakt is"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
