Nu nog een tweede branch gemaakt, datacleanb4split

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -77,8 +77,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Oefen zodat er een develop branch gemaakt is"
+    "# Oefen zodat er een develop branch gemaakt is.\n",
+    "Nu heb ik er een extra branch voor het clean van de data voor de split."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
