Nog maar wat commiten

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -82,9 +82,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Gaan we nog iets commiten"
+   ]
   },
   {
    "cell_type": "code",
