Ook hier iets toevoegen dan

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -85,7 +85,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Ook maar iets toevoegen ofzo"
+   ]
   }
  ],
  "metadata": {
