Ook maar wat neerzetten I guess

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -81,12 +81,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Ook maar iets toevoegen ofzo"
+    "Ook maar iets neerzetten ofzo"
    ]
   }
  ],
