--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -87,6 +87,14 @@
    "source": [
     "Ook maar iets neerzetten ofzo"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Doe t nou\n"
+   ]
   }
  ],
  "metadata": {
