--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -33,7 +33,11 @@
    ],
    "source": [
     "# Run this to use from colab environment\n",
-    "%pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
+    "%pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as ny\n",
+    "import matplotlib as mpl"
    ]
   },
   {
@@ -77,7 +81,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Oefen zodat er een develop branch gemaakt is"
+    "# Data clean-up\n",
+    "In this section double entries, such as repeated features and samples, will be removed from the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code from clean/b4/split may be merged into this section."
    ]
   },
   {
@@ -85,7 +99,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ook maar iets neerzetten ofzo"
+    "# Data splitting (1/2)\n",
+    "In this section the dataset will be split into two datasets, the Design set (D_set) and the Final Test set (Ft_set). This splitting will be performed randomly where 70% will end up in D_set and the remaining 30% will be stored in Ft_set. Ft_set will not be used at all, until the very latest to evaluate our tool and establish how generalising the tool is."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code from split_1 may be merged in this section here!"
    ]
   },
   {
@@ -93,7 +117,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Doe t nou\n"
+    "# Data splitting (2/2)\n",
+    "In this section D_set will be split into two datasets, the train set (Tr_set) and the Validation set (Va_set). This splitting will be performed randomly where 90% will end up in Tr_set and the remaining 10% will be stored in Va_set. This second splitting will be repeated 10 times with each iteration a different 10% of the samples will be put into the Va_set, as we will use cross-validation to make most out of the data available. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code from split_2 may be merged into this section."
    ]
   }
  ],
