Added pandas, numpy, matplotlib

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -73,20 +73,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Oefen zodat er een develop branch gemaakt is.\n",
-    "Nu heb ik er een extra branch voor het clean van de data voor de split."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Gaan we nog iets commiten"
+    "# Data clean-up\n",
+    "In this section double entries, such as repeated features and samples, will be removed from the dataset."
    ]
   },
   {
