Adjust import matplotlib

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -32,12 +32,8 @@
     }
    ],
    "source": [
-    "# Run this to use from colab environment\n",
-    "%pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as ny\n",
-    "import matplotlib as mpl"
+    "# Run this to use from VS code environment\n",
+    "%pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
    ]
   },
   {
@@ -70,6 +66,9 @@
    "source": [
     "# Data loading functions. Uncomment the one you want to use\n",
     "from worcliver.load_data import load_data\n",
+    "import pandas as pd\n",
+    "import numpy as ny\n",
+    "import matplotlib as plb\n",
     "\n",
     "data = load_data()\n",
     "print(f'The number of samples: {len(data.index)}')\n",
