Changed header, added pd/ny/plb

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -66,6 +66,9 @@
    "source": [
     "# Data loading functions. Uncomment the one you want to use\n",
     "from worcliver.load_data import load_data\n",
+    "import pandas as pd\n",
+    "import numpy as ny\n",
+    "import matplotlib as plb\n",
     "\n",
     "data = load_data()\n",
     "print(f'The number of samples: {len(data.index)}')\n",
@@ -77,20 +80,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finally????"
+    "# Here to insert if complete ready"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
