--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -66,6 +66,9 @@
    "source": [
     "# Data loading functions. Uncomment the one you want to use\n",
     "from worcliver.load_data import load_data\n",
+    "import pandas as pd\n",
+    "import numpy as ny\n",
+    "import matplotlib as plb\n",
     "\n",
     "data = load_data()\n",
     "print(f'The number of samples: {len(data.index)}')\n",
