Added/Removal of duplicate entries

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -58,8 +58,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of samples: 186\n",
-      "The number of columns: 494\n"
+      "The number of samples (after removal of duplicates): 186, the number of duplicates that have been removed: 0\n",
+      "The number of columns (after removal of duplicates): 494, the number of duplicates that have been removed: 0\n"
      ]
     }
    ],
@@ -67,16 +67,30 @@
     "# Data loading functions. Uncomment the one you want to use\n",
     "from worcliver.load_data import load_data\n",
     "import pandas as pd\n",
-    "import numpy as ny\n",
-    "import matplotlib as plb\n",
+    "import numpy as np\n",
+    "import matplotlib as plt\n",
     "\n",
     "data = load_data()\n",
-    "print(f'The number of samples: {len(data.index)}')\n",
-    "print(f'The number of columns: {len(data.columns)}')\n"
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "'''\n",
+    "These 2 lines add a duplicate sample in the DataFrame, you can than observe what the effect is \n",
+    "in the printed sentence. If you'd like to see it indeed works, please uncomment these lines.\n",
+    "'''\n",
+    "# row = df.iloc[0].copy()\n",
+    "# df = df.append(row, ignore_index=True)\n",
+    "\n",
+    "'''\n",
+    "In the lines below we first drop all duplicate entries, whether it is a duplicate row or a column. \n",
+    "Additionally, the number of duplicates will be returned to the user.\n",
+    "'''\n",
+    "\n",
+    "df_f = df.drop_duplicates()\n",
+    "print(f'The number of samples (after removal of duplicates): {len(df_f.index)}, the number of duplicates that had to be removed: {len(df.index)-len(df_f.index)}')\n",
+    "print(f'The number of columns (after removal of duplicates): {len(df_f.columns)}, the number of duplicates that had to be removed: {len(df.columns)-len(df_f.columns)}')\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
