Forgot to save in previous commit

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -676,17 +676,24 @@
        "[11 rows x 494 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df_f      # So we can just use df from now on\n",
-    "\n",
-    "df = df.replace('', np.nan)                   # To get rid of empty values\n",
-    "\n",
-    "df.describe(include='all') # Shows there are only 2 labels\n"
+    "df = df_f                                       # So we can just use df from now on\n",
+    "df = df.replace('', np.nan)                     # Any empty values are replaced for NaN\n",
+    "df.describe(include='all')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "The table above shows there are only 2 labels present in the dataset, from observation of the csv.file we can see the labels are 'malignant' and 'benigne'. What is also stated here, that 94 of the 186 samples was labeled malignant (and thus 92 samples are labeled benigne.) This information will be usefull in the next step, what is the stratified splitting of our data."
    ]
   },
   {
