Fixed merge conflict via text editor.

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -125,7 +125,43 @@
     "### Conclusion\n",
     "The table above shows there are only 2 labels present in the dataset, from observation of the csv.file we can see the labels are 'malignant' and 'benigne'. What is also stated here, that 94 of the 186 samples was labeled malignant (and thus 92 samples are labeled benigne.) This information will be usefull in the next step, what is the stratified splitting of our data."
    ]
-  }
+  },
+  {
+    "attachments": {},
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+     "# Data splitting (1/2)\n",
+     "In this section the dataset will be split into two datasets, the Design set (D_set) and the Final Test set (Ft_set). This splitting will be performed randomly where 70% will end up in D_set and the remaining 30% will be stored in Ft_set. Ft_set will not be used at all, until the very latest to evaluate our tool and establish how generalising the tool is."
+    ]
+   },
+   {
+    "cell_type": "code",
+    "execution_count": null,
+    "metadata": {},
+    "outputs": [],
+    "source": [
+     "# Code from split_1 may be merged in this section here!"
+    ]
+   },
+   {
+    "attachments": {},
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+     "# Data splitting (2/2)\n",
+     "In this section D_set will be split into two datasets, the train set (Tr_set) and the Validation set (Va_set). This splitting will be performed randomly where 90% will end up in Tr_set and the remaining 10% will be stored in Va_set. This second splitting will be repeated 10 times with each iteration a different 10% of the samples will be put into the Va_set, as we will use cross-validation to make most out of the data available. "
+    ]
+   },
+   {
+    "cell_type": "code",
+    "execution_count": null,
+    "metadata": {},
+    "outputs": [],
+    "source": [
+     "# Code from split_2 may be merged into this section."
+    ]
+   }
  ],
  "metadata": {
   "colab": {
