added preprocessing and first model

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "[5 rows x 494 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "Length: 494, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "      dtype='object', length=494)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "Length: 494, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,6 +581,178 @@
     "\n",
     "#how many missings are there and in what columns?\n",
     "data.isnull().sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test & Train split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#split data in features and label\n",
+    "y = data['label']\n",
+    "X = data.drop(['label'], axis=1)\n",
+    "\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature normalization"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De meest standaard scaling gekozen van: https://scikit-learn.org/stable/modules/preprocessing.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
+    "X_train_scaled = preprocessing.StandardScaler().fit_transform(X_train)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature selection\n",
+    "## Removing features with low variance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.17608232,  2.83958564,  0.64833893, ...,  0.58798237,\n",
+       "        -0.36417837,  1.32229703],\n",
+       "       [ 0.49347027, -0.53945932,  0.8201891 , ...,  0.18061697,\n",
+       "        -0.36417837,  1.11564879],\n",
+       "       [-0.80253627,  1.57235364,  1.45048308, ..., -0.24681107,\n",
+       "        -0.36417837,  0.57233173],\n",
+       "       ...,\n",
+       "       [ 0.44808211, -0.50067421,  0.72377283, ...,  0.09371332,\n",
+       "        -0.36417837,  0.95556883],\n",
+       "       [-0.88331702, -0.06633901,  0.16538468, ..., -0.1321743 ,\n",
+       "        -0.36417837,  0.43597763],\n",
+       "       [-1.32805174,  1.85142973,  0.75634146, ..., -0.31234196,\n",
+       "        -0.36417837,  0.28900335]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "X_train_scaled_LV = VarianceThreshold(threshold=(.8 * (1 - .8)))\n",
+    "X_train_scaled_LV.fit_transform(X_train_scaled)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Univariate feature selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/annewilvanwerkhoven/opt/anaconda3/lib/python3.8/site-packages/sklearn/feature_selection/_univariate_selection.py:114: UserWarning: Features [ 77  83  84  90  97 103 110 467 474 475 480 487 488] are constant.\n",
+      "  warnings.warn(\"Features %s are constant.\" % constant_features_idx,\n",
+      "/Users/annewilvanwerkhoven/opt/anaconda3/lib/python3.8/site-packages/sklearn/feature_selection/_univariate_selection.py:116: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  f = msb / msw\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import f_classif\n",
+    "\n",
+    "X_new = SelectKBest(f_classif, k=10).fit_transform(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import svm model\n",
+    "from sklearn import svm\n",
+    "\n",
+    "#Create a svm Classifier\n",
+    "clf = svm.SVC(kernel='linear') # Linear Kernel\n",
+    "\n",
+    "#Train the model using the training sets\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "#Predict the response for test dataset\n",
+    "y_pred = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import scikit-learn metrics module for accuracy calculation\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "# Model Accuracy: how often is the classifier correct?\n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
    ]
   }
  ],
