scaler and data load

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -77,38 +77,77 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The number of samples: 115\n",
-            "The number of columns: 481\n",
-            "(115, 481)\n",
-            "(92, 481)\n",
-            "(11, 481)\n",
-            "(12, 481)\n"
+            "['liposarcoma', 'lipoma']\n",
+            "Categories (2, object): ['lipoma' < 'liposarcoma']\n",
+            "[[ 1.41607388e+00  2.75742741e-01  1.26753139e-01 ... -6.53277864e-01\n",
+            "  -1.52809004e+00 -3.58400285e-01]\n",
+            " [ 3.53175800e-01  9.54383519e-01  2.21390016e+00 ...  2.75724793e+00\n",
+            "  -6.40585743e-01  1.83972594e+00]\n",
+            " [-8.72704709e-01  1.61534848e+00 -3.86924431e-01 ... -2.19873633e-03\n",
+            "   1.03768519e+00  2.25059201e-01]\n",
+            " ...\n",
+            " [-5.64821198e-02 -7.80807173e-01 -1.38600246e+00 ... -8.05427523e-01\n",
+            "   6.81561972e-01 -2.36181895e+00]\n",
+            " [ 1.91586875e+00 -1.60574383e+00 -2.09324758e-01 ... -3.62120381e-01\n",
+            "  -1.86358700e-01  4.14637674e-01]\n",
+            " [ 4.49871492e-01  1.14097099e+00  7.59191985e-01 ... -6.93847070e-01\n",
+            "  -1.52809004e+00 -4.12892080e-01]]\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.67      0.83      0.74        12\n",
+            "           1       0.75      0.55      0.63        11\n",
+            "\n",
+            "    accuracy                           0.70        23\n",
+            "   macro avg       0.71      0.69      0.69        23\n",
+            "weighted avg       0.71      0.70      0.69        23\n",
+            "\n",
+            "[[10  2]\n",
+            " [ 5  6]]\n"
           ]
         }
       ],
       "source": [
-        "# the possible outcomes: lipoma or liposarcoma\n",
-        "labels = list(set(data.label))\n",
-        "\n",
-        "# remove columns only containing 0\n",
-        "data = data.loc[:, (data != 0.0).any(axis=0)] \n",
-        "print(f'The number of samples: {len(data.index)}')\n",
-        "print(f'The number of columns: {len(data.columns)}')\n",
-        "\n",
-        "# change lipoma and liposarcoma to 0 and 1\n",
+        "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+        "# change lipoma = 0 and liposarcoma = 1 and encode labels\n",
+        "group_names = list(set(data.label))\n",
         "data.loc[data['label'] == 'lipoma', 'label'] = 0\n",
         "data.loc[data['label'] == 'liposarcoma', 'label'] = 1\n",
+        "data['label'] = pd.cut(data['label'], bins = 2, labels=group_names)\n",
+        "print(data['label'].unique())\n",
+        "label_diag = LabelEncoder()\n",
+        "data['label'] = label_diag.fit_transform(data['label'])\n",
         "\n",
+        "# assign X to measurements and y to outcome (lipoma/sarcoma)\n",
+        "X = data.drop('label', axis=1)\n",
+        "y = data['label']\n",
         "\n",
-        "# export to csv to see if the code works as expected\n",
-        "data.to_csv('datacheck.csv', index=False)"
+        "# splitting the data into test and train\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "test_size = 0.2\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=42)\n",
+        "\n",
+        "# scale the data\n",
+        "sc = StandardScaler()\n",
+        "X_train = sc.fit_transform(X_train)\n",
+        "X_test = sc.transform(X_test)\n",
+        "print(X_train)\n",
+        "\n",
+        "# try a classifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "rfc = RandomForestClassifier(n_estimators=200)\n",
+        "rfc.fit(X_train, y_train)\n",
+        "pred_rfc = rfc.predict(X_test)\n",
+        "\n",
+        "print(classification_report(y_test, pred_rfc))\n",
+        "print(confusion_matrix(y_test, pred_rfc))"
       ]
     }
   ],
