--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -86,30 +86,30 @@
           "text": [
             "['liposarcoma', 'lipoma']\n",
             "Categories (2, object): ['lipoma' < 'liposarcoma']\n",
-            "[[ 1.41607388e+00  2.75742741e-01  1.26753139e-01 ... -6.53277864e-01\n",
-            "  -1.52809004e+00 -3.58400285e-01]\n",
-            " [ 3.53175800e-01  9.54383519e-01  2.21390016e+00 ...  2.75724793e+00\n",
-            "  -6.40585743e-01  1.83972594e+00]\n",
-            " [-8.72704709e-01  1.61534848e+00 -3.86924431e-01 ... -2.19873633e-03\n",
-            "   1.03768519e+00  2.25059201e-01]\n",
+            "[[-0.06896609  0.19614026 -0.85233803 ... -0.65606844 -1.42908577\n",
+            "  -1.34198741]\n",
+            " [-1.00021849  0.64282965  0.97477001 ...  1.13432028  0.62755147\n",
+            "   1.17725266]\n",
+            " [ 0.81313167 -0.57854378  2.679078   ...  0.64115649 -1.42908577\n",
+            "   1.60914239]\n",
             " ...\n",
-            " [-5.64821198e-02 -7.80807173e-01 -1.38600246e+00 ... -8.05427523e-01\n",
-            "   6.81561972e-01 -2.36181895e+00]\n",
-            " [ 1.91586875e+00 -1.60574383e+00 -2.09324758e-01 ... -3.62120381e-01\n",
-            "  -1.86358700e-01  4.14637674e-01]\n",
-            " [ 4.49871492e-01  1.14097099e+00  7.59191985e-01 ... -6.93847070e-01\n",
-            "  -1.52809004e+00 -4.12892080e-01]]\n",
-            "              precision    recall  f1-score   support\n",
+            " [-0.84025635  1.55569853 -0.99153506 ... -0.52358715  0.67204122\n",
+            "  -0.90344033]\n",
+            " [-1.53550315  0.82693849  0.15842472 ... -0.33635456 -1.41952079\n",
+            "   0.32485038]\n",
+            " [ 0.11284454  0.15136892 -0.83247575 ... -0.45424561  1.21700867\n",
+            "  -0.48646213]]\n",
+            "rfc               precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.67      0.83      0.74        12\n",
-            "           1       0.75      0.55      0.63        11\n",
+            "           0       0.75      0.69      0.72        13\n",
+            "           1       0.64      0.70      0.67        10\n",
             "\n",
             "    accuracy                           0.70        23\n",
-            "   macro avg       0.71      0.69      0.69        23\n",
-            "weighted avg       0.71      0.70      0.69        23\n",
+            "   macro avg       0.69      0.70      0.69        23\n",
+            "weighted avg       0.70      0.70      0.70        23\n",
             "\n",
-            "[[10  2]\n",
-            " [ 5  6]]\n"
+            "[[9 4]\n",
+            " [3 7]]\n"
           ]
         }
       ],
@@ -131,13 +131,30 @@
         "# splitting the data into test and train\n",
         "from sklearn.model_selection import train_test_split\n",
         "test_size = 0.2\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=42)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=10)\n",
+        "X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.3, random_state=10)\n",
         "\n",
         "# scale the data\n",
         "sc = StandardScaler()\n",
         "X_train = sc.fit_transform(X_train)\n",
         "X_test = sc.transform(X_test)\n",
-        "print(X_train)\n",
+        "print(X_train)\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Classify"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
         "# try a classifier\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -146,7 +163,7 @@
         "rfc.fit(X_train, y_train)\n",
         "pred_rfc = rfc.predict(X_test)\n",
         "\n",
-        "print(classification_report(y_test, pred_rfc))\n",
+        "print('rfc', classification_report(y_test, pred_rfc))\n",
         "print(confusion_matrix(y_test, pred_rfc))"
       ]
     }
