--- a/assignment_ecg.ipynb
+++ b/assignment_ecg.ipynb
@@ -21,10 +21,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "test amber\n"
+        "test merel"
       ],
       "metadata": {
-        "id": "2qXp_coByXgM"
+        "id": "Nzr4KgtfykbJ"
       }
     },
     {
