--- a/assignment_ecg.ipynb
+++ b/assignment_ecg.ipynb
@@ -28,6 +28,17 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "Test lara"
+      ],
+      "metadata": {
+        "id": "YcuyUxaozwjB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "5EG78VSHfhNi"
