Delete tests and add print of dataframa data

--- a/assignment_ecg.ipynb
+++ b/assignment_ecg.ipynb
@@ -11,35 +11,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Test test\n"
-      ],
-      "metadata": {
-        "id": "oOruXTaJgFg7"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "test merel"
-      ],
-      "metadata": {
-        "id": "Nzr4KgtfykbJ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "Test lara"
-      ],
-      "metadata": {
-        "id": "YcuyUxaozwjB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "5EG78VSHfhNi"
       },
@@ -51,11 +22,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "CiDn2Sk-VWqE"
+        "id": "CiDn2Sk-VWqE",
+        "outputId": "8dee2857-a98c-417f-f63f-d0bf2343e2e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'tm10007_ml' already exists and is not an empty directory.\n",
+            "The number of samples: 827\n",
+            "The number of columns: 9001\n"
+          ]
+        }
+      ],
       "source": [
         "# Run this to use from colab environment\n",
         "!git clone https://github.com/jveenland/tm10007_ml.git\n",
@@ -72,6 +57,18 @@
         "print(f'The number of samples: {len(data.index)}')\n",
         "print(f'The number of columns: {len(data.columns)}')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This piece of code prints the dataframe data\n",
+        "print(data)"
+      ],
+      "metadata": {
+        "id": "V25Z67Pf5SPD"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
