--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -111,24 +111,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "TEST_set.csv already exists\n"
+            "None\n"
           ]
         }
       ],
       "source": [
         "# code that splits the data into test and validation sets if this is not done already\n",
-        "if os.path.exists('./TEST_set.csv'):\n",
-        "    print('TEST_set.csv already exists')\n",
-        "else:\n",
-        "    split_set(X,y,test_size)\n",
-        "    print('TEST_set.csv does not exist, generating new test and training sets')"
+        "\n",
+        "split_action = split_set(X,y,test_size)\n",
+        "print(split_action)\n",
+        "\n",
+        "# if os.path.exists('./TEST_set.csv'):\n",
+        "#     print('TEST_set.csv already exists')\n",
+        "# else:\n",
+        "#     split_set(X,y,test_size)\n",
+        "#     print('TEST_set.csv does not exist, generating new test and training sets')"
       ]
     },
     {
@@ -141,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -168,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -177,14 +181,14 @@
           "text": [
             "rfc               precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.86      0.46      0.60        13\n",
-            "           1       0.59      0.91      0.71        11\n",
+            "           0       0.80      0.31      0.44        13\n",
+            "           1       0.53      0.91      0.67        11\n",
             "\n",
-            "    accuracy                           0.67        24\n",
-            "   macro avg       0.72      0.69      0.66        24\n",
-            "weighted avg       0.73      0.67      0.65        24\n",
+            "    accuracy                           0.58        24\n",
+            "   macro avg       0.66      0.61      0.56        24\n",
+            "weighted avg       0.67      0.58      0.55        24\n",
             "\n",
-            "[[ 6  7]\n",
+            "[[ 4  9]\n",
             " [ 1 10]]\n"
           ]
         }
