--- a/assignment_ecg.ipynb
+++ b/assignment_ecg.ipynb
@@ -6,7 +6,7 @@
         "id": "7SXpaKwwGe5x"
       },
       "source": [
-        "# TM10007 Assignment template -- ECG data"
+        "# TM10007 Group 4 -- ECG Data"
       ]
     },
     {
@@ -17,32 +17,39 @@
       "source": [
         "## Data loading and cleaning\n",
         "\n",
-        "Below are functions to load the dataset of your choice. After that, it is all up to you to create and evaluate a classification method. Beware, there may be missing values in these datasets. Good luck!"
+        "Below we load the ECG data, convert it to a dataframe, clean it and visualize it"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "CiDn2Sk-VWqE",
-        "outputId": "470da9fe-aa43-479e-a1d2-7d634ca6946d",
+        "outputId": "1e31da2d-b790-4266-86d3-a154d061a6da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'TM10007_ML_ECG_group4' already exists and is not an empty directory.\n",
+            "Cloning into 'TM10007_ML_ECG_group4'...\n",
+            "remote: Enumerating objects: 110, done.\u001b[K\n",
+            "remote: Counting objects: 100% (46/46), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (34/34), done.\u001b[K\n",
+            "remote: Total 110 (delta 29), reused 12 (delta 12), pack-reused 64\u001b[K\n",
+            "Receiving objects: 100% (110/110), 67.94 MiB | 22.06 MiB/s, done.\n",
+            "Resolving deltas: 100% (46/46), done.\n",
             "The number of samples: 827\n",
             "The number of columns: 9001\n"
           ]
         }
       ],
       "source": [
-        "# Run this to use from colab environment\n",
+        "# Load CSV file into dataframe\n",
         "!git clone https://github.com/JosefienBerg/TM10007_ML_ECG_group4.git\n",
         "\n",
         "import zipfile\n",
@@ -69,9 +76,10 @@
         "outputId": "6211b00d-38d2-4b6f-9592-e82cac725d31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
